    - `ConfusionMatrix` can now be used as an ``errorfx`` in Crossvalidation.
    - A `Node`s postproc is now accessible as a property.
    - `RepeatedMeasure` has a new 'concat_as' argument that allows results to be
      concatenated along the feature axis. The default behavior, stacking as
      multiple samples, is unchanged.


Releases
========

* 0.6.0~rc2 (Thu, Mar 3 2011)

  * Various fixes in the mvpa.atlas module.

* 0.6.0~rc1 (Thu, Feb 24 2011)

  * Many, many, many
  * For an overview of the most drastic changes :ref:`see constantly
    evolving release notes for 0.6 <chap_release_notes_0.6>`

* 0.5.0 (sometime in March 2010)

  This is a special release, because it has never seen the general public.
  A summary of fundamental changes introduced in this development version
  can be seen in the :ref:`release notes <chap_release_notes_0.5>`.

  Most notably, this version was to first to come with a comprehensive two-day
  workshop/tutorial.

* 0.4.6 (Tue, Feb 01 2011) (Total: 20 commits)

  A bugfix release

  * Fixed (few BF commits):

    - Compatibility with numpy 1.5.1 (histogram) and scipy 0.8.0
      (workaround for a regression in legendre)
    - Compatibility with libsvm 3.0
    - :class:`~mvpa.clfs.plr.PLR` robustification

  * Enhancements

    - Enforce suppression of numpy warnings while running unittests.
      Also setting verbosity >= 3 enables all warnings (Python, NumPy,
      and PyMVPA)
    - :file:`doc/examples/nested_cv.py` example (adopted from 0.5)
    - Introduced base class :class:`~mvpa.clfs.base.LearnerError` for
      classifiers' exceptions (adopted from 0.5)
    - Adjusted example data to live upto nibabel's warranty of NIfTI
      standard-compliance
    - More robust operation of MC iterations -- skip iterations where
      classifier experienced difficulties and raise an exception
      (e.g. due to degenerate data)

* 0.4.5 (Fri, Oct 01 2010) (Total: 27 commits)

  A bugfix release

  * Fixed (13 BF commits):
